Output as JSONs
Signed-off-by: Mikayla Thompson <thomika@amazon.com>